Add AI enhancer
